# quartet

./: CMakeLists.txt
src/: main.cpp  tet_mesh.cpp  tet_mesh.h
